--- a/work/candidate-expenditures-visualization.html
+++ b/work/candidate-expenditures-visualization.html
@@ -6,8 +6,9 @@
 
   <title>WA Congressional Candidate Expenditures Visualization - Justin Tran</title>
 
-  <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/stylesheets/project.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/scripts/main.js"></script>
 </head>
@@ -19,18 +20,66 @@
       <p>CSE 442 Project</p>
       <p>10 visualizations using Tableau based on a dataset of Congressional Candidate Expenditures so far in 2017-2018.</p>
       <p><a href="https://courses.cs.washington.edu/courses/cse442/17au/data/oppexp.csv.gzdataset"> dataset source</a></p>
-      <img src="/images/candidate-expenditures-visualization/visualization-1.png" alt="Map of Total Expenditures by WA Candidates">
-      <img src="/images/candidate-expenditures-visualization/visualization-2.png" alt="Summary of Total Expenditures per Month by WA Candidates">
-      <img src="/images/candidate-expenditures-visualization/visualization-3.png" alt="Credit Card Payments to Carol Stream, Illinois from McMorris Rodgers">
-      <img src="/images/candidate-expenditures-visualization/visualization-4.png" alt="Credit Card Expenditures from McMorris Rodgers">
-      <img src="/images/candidate-expenditures-visualization/visualization-5.png" alt="Summary of Null Expenditures from McMorris Rodgers">
-      <img src="/images/candidate-expenditures-visualization/visualization-6.png" alt="Map of Expenditures from McMorris Rodgers">
-      <img src="/images/candidate-expenditures-visualization/visualization-7.png" alt="Comparing both Senators' Expenditures 1">
-      <img src="/images/candidate-expenditures-visualization/visualization-8.png" alt="Comparing both Senators' Expenditures 1">
-      <img src="/images/candidate-expenditures-visualization/visualization-9.png" alt="Summary of Expenditures by Senate Candidates">
-      <img src="/images/candidate-expenditures-visualization/visualization-10.png" alt="Summary of Expenditures by House Candidates">
-      <img src="/images/candidate-expenditures-visualization/visualization-11.png" alt="Summary of Total Expenditures by WA Candidates">
-      <img src="/images/candidate-expenditures-visualization/visualization-12.png" alt="Summary of Expenditures by per Candidate">
+      <figure>
+        <div class="project-image">
+          <img src="/images/candidate-expenditures-visualization/visualization-1.png" alt="Map of Total Expenditures by WA Candidates">
+        </div>
+      </figure>
+      <figure>
+        <div class="project-image">
+          <img src="/images/candidate-expenditures-visualization/visualization-2.png" alt="Summary of Total Expenditures per Month by WA Candidates">
+        </div>
+      </figure>
+      <figure>
+        <div class="project-image">
+          <img src="/images/candidate-expenditures-visualization/visualization-3.png" alt="Credit Card Payments to Carol Stream, Illinois from McMorris Rodgers">
+        </div>
+      </figure>
+      <figure>
+        <div class="project-image">
+          <img src="/images/candidate-expenditures-visualization/visualization-4.png" alt="Credit Card Expenditures from McMorris Rodgers">
+        </div>
+      </figure>
+      <figure>
+        <div class="project-image">
+          <img src="/images/candidate-expenditures-visualization/visualization-5.png" alt="Summary of Null Expenditures from McMorris Rodgers">
+        </div>
+      </figure>
+      <figure>
+        <div class="project-image">
+          <img src="/images/candidate-expenditures-visualization/visualization-6.png" alt="Map of Expenditures from McMorris Rodgers">
+        </div>
+      </figure>
+      <figure>
+        <div class="project-image">
+          <img src="/images/candidate-expenditures-visualization/visualization-7.png" alt="Comparing both Senators' Expenditures 1">
+        </div>
+      </figure>
+      <figure>
+        <div class="project-image">
+          <img src="/images/candidate-expenditures-visualization/visualization-8.png" alt="Comparing both Senators' Expenditures 1">
+        </div>
+      </figure>
+      <figure>
+        <div class="project-image">
+          <img src="/images/candidate-expenditures-visualization/visualization-9.png" alt="Summary of Expenditures by Senate Candidates">
+        </div>
+      </figure>
+      <figure>
+        <div class="project-image">
+          <img src="/images/candidate-expenditures-visualization/visualization-10.png" alt="Summary of Expenditures by House Candidates">
+        </div>
+      </figure>
+      <figure>
+        <div class="project-image">
+          <img src="/images/candidate-expenditures-visualization/visualization-11.png" alt="Summary of Total Expenditures by WA Candidates">
+        </div>
+      </figure>
+      <figure>
+        <div class="project-image">
+          <img src="/images/candidate-expenditures-visualization/visualization-12.png" alt="Summary of Expenditures by per Candidate">
+        </div>
+      </figure>
     </section>
   </article>
 </body>
