--- a/work/us-census-visualization.html
+++ b/work/us-census-visualization.html
@@ -6,8 +6,9 @@
 
   <title>US Census Visualization - Justin Tran</title>
 
-  <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/stylesheets/project.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/scripts/main.js"></script>
 </head>
@@ -21,7 +22,11 @@
       <p>Visualization based on US census data between 1900 and 2000.
       </p>
       <p><a href="https://courses.cs.washington.edu/courses/cse442/17au/data/census2000.csv">dataset source</a></p>
-      <img src="/images/us-census-visualization/visualization.jpg" alt="US Census Visualization">
+      <figure>
+        <div class="project-image">
+          <img src="/images/us-census-visualization/visualization.jpg" alt="US Census Visualization">
+        </div>
+      </figure>
     </section>
     <section>
       <h2>Design Rationale</h2>
