fixed margins for project pages

--- a/work/cyrus.html
+++ b/work/cyrus.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="/stylesheets/project.css">
+  <link href="https://fonts.googleapis.com/css?family=Song+Myung" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/scripts/main.js"></script>
 </head>
@@ -65,7 +66,7 @@
           <p>To make it <strong>engaging</strong>, we wanted to use utilize cool and novel technology to make things more interesting. We decided we would use an image recognition service (possibly Google Vision API) so children could take pictures of objects and learn how to spell and pronounce them. Here is the camera portion that Stefanie designed:</p>
           <figure>
             <div class="project-image">
-              <img src="/images/cyrus/camera-page.jng" alt="Camera Page">
+              <img src="/images/cyrus/camera-page.jpg" alt="Camera Page">
             </div>
             <figcaption>Camera function in our app</figcaption>
           </figure>
