added covers to work

--- a/index.html
+++ b/index.html
@@ -17,29 +17,41 @@
   <section class="page-container intro-container">
     <div class="introduction">
       <h1>Hello! 👋</h1>
-      <div>I'm Justin Tran, a rising senior at the University of Washington studying Computer Science. I'm interested in UX Design and Web Development. This summer, I'll be interning at <span class="google-blue">G</span><span class="google-red">o</span><span class="google-yellow">o</span><span class="google-blue">g</span><span class="google-green">l</span><span class="google-red">e</span> as a UX Engineer. I'm currently looking for fall and winter internships!</div>
+      <p>I'm Justin Tran, a rising senior at the University of Washington studying Computer Science. I'm interested in UX Design and Web Development. This summer, I'll be interning at <span class="google-blue">G</span><span class="google-red">o</span><span class="google-yellow">o</span><span class="google-blue">g</span><span class="google-green">l</span><span class="google-red">e</span> as a UX Engineer. I'm currently looking for fall and winter internships!</p>
     </div>
   </section>
   <section>
     <h1 class="header-container">Featured Projects</h1>
-    <a href="/work/pillar.html">
-      <section class="page-container project-container" id="pillar">
-        <h2>UW Community Pillar</h2>
-        <p>A pillar designed to foster a sense of community and to spark reflection on why we’re all at the university.</p>
-      </section>
-    </a>
-    <a href="/work/phrasebot.html">
-      <section class="page-container project-container" id="phrasebot">
-        <h2>Phrasebot</h2>
-        <p>A location-based language and cultural assistant designed to aid new immigrants in overcoming language and cultural barriers.</p>
-      </section>
-    </a>
-    <a href="/work/arque.html">
-      <section class="page-container project-container" id="arque">
-        <h2>Arque</h2>
-        <p>A website for parents of elementary school children to find a community of similar parents, where they can exchange resources, track and share goal progress, and share experiences with other parents.</p>
-      </section>
-    </a>
+    <section class="project" id="pillar">
+      <div class="project-container website-container">
+        <div class="project-text">
+          <h2>UW Community Pillar</h2>
+          <p class="project-text__description">A public installation designed to foster a sense of community and to spark reflection on why we’re all at the university.</p>
+          <a class="project-link" href="/work/pillar.html"><div class="project-button">View Case Study</div></a>
+        </div>
+        <img src="/images/pillar/placeholder.png" style="width:220px">
+      </div>
+    </section>
+    <section class="project" id="phrasebot">
+      <div class="project-container website-container">
+        <div class="project-text">
+          <h2>Phrasebot</h2>
+          <p class="project-text__description">A location-based language and cultural assistant designed to aid new immigrants in overcoming language and cultural barriers.</p>
+          <a class="project-link" href="/work/phrasebot.html"><div class="project-button">View Case Study</div></a>
+        </div>
+        <img src="/images/phrasebot/phrasebot-cover.png" style="width:400px">
+      </div>
+    </section>
+    <section class="project" id="arque">
+      <div class="project-container website-container">
+        <div class="project-text">
+          <h2>Arque</h2>
+          <p class="project-text__description">A website for parents of elementary school children to find a community of similar parents, where they can exchange resources, track and share goal progress, and share experiences with other parents.</p>
+          <a class="project-link" href="/work/arque.html"><div class="project-button">View Case Study</div></a>
+        </div>
+        <img src="/images/arque/arque-mockup.png" style="width:500px">
+      </div>
+    </section>
   </section>
 </body>
 </html>
