--- a/navigation-bar.html
+++ b/navigation-bar.html
@@ -1,5 +1,5 @@
 <div class="navigation-bar">
-  <div class="navigation-bar__buttons header-footer-container">
+  <div class="navigation-bar__buttons header-footer-container website-container">
     <a href="/index.html" class="logo"><div>Justin Tran</div></a>
     <nav>
       <a href="/index.html" class="nav-buttons"><div>Home</div></a>
