--- a/work/work.html
+++ b/work/work.html
@@ -8,39 +8,69 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/work.css">
   <link href="https://fonts.googleapis.com/css?family=Song+Myung" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/scripts/main.js"></script>
 </head>
 <body>
-  <article class="container">
+  <article>
     <h1>Work</h1>
     <h2>UX</h2>
-    <a href="/work/pillar.html">
-      <div>UW Community Pillar</div>
-    </a>
-    <a href="/work/arque.html">
-      <div>Arque</div>
-    </a>
-    <a href="/work/cyrus.html">
-      <div>Cyrus</div>
-    </a>
-    <a href="/work/phrasebot.html">
-      <div>Phrasebot</div>
-    </a>
-    <a href="/work/npo-go.html">
-      <div>NPO Go</div>
-    </a>
+    <div class="work-container">
+      <a href="/work/pillar.html">
+        <div class="work-item">
+          <div>UW Community Pillar</div>
+        </div>
+      </a>
+      <a href="/work/arque.html">
+        <div class="work-item">
+          <img class="project-cover" src="/images/arque/arque-cover.png">
+          <div>Arque</div>
+        </div>
+      </a>
+      <a href="/work/cyrus.html">
+        <div class="work-item">
+          <img class="project-cover" src="/images/cyrus/cyrus-cover.png">
+          <div>Cyrus</div>
+        </div>
+      </a>
+      <a href="/work/phrasebot.html">
+        <div class="work-item">
+          <img class="project-cover" src="/images/phrasebot/phrasebot-cover.png">
+          <div>Phrasebot</div>
+        </div>
+      </a>
+      <a href="/work/npo-go.html">
+        <div class="work-item">
+          <img class="project-cover" src="/images/npo-go/npo-go-cover.png">
+          <div>NPO Go</div>
+        </div>
+      </a>
+      <div class="work-item"></div>
+    </div>
     <h2>Data Visualization</h2>
-    <a href="/work/us-census-visualization.html">
-      <div>US Census Visualization</div>
-    </a>
-    <a href="/work/candidate-expenditures-visualization.html">
-      <div>WA Congressional Candidate Expenditures Visualization</div>
-    </a>
-    <a href="/work/relationship-data-exploration.html">
-      <div>Relationship Data Exploration</div>
-    </a>
+    <div class="work-container">
+      <a href="/work/us-census-visualization.html">
+        <div class="work-item">
+          <img class="project-cover" src="/images/us-census-visualization/census-cover.png">
+          <div>US Census Visualization</div>
+        </div>
+      </a>
+      <a href="/work/candidate-expenditures-visualization.html">
+        <div class="work-item">
+          <img class="project-cover" src="/images/candidate-expenditures-visualization/expenditures-cover.png">
+          <div>WA Congressional Candidate Expenditures Visualization</div>
+        </div>
+      </a>
+      <a href="/work/relationship-data-exploration.html">
+        <div class="work-item">
+          <img class="project-cover" src="/images/relationship-data-exploration/relationship-cover.png">
+          <div>Relationship Data Exploration</div>
+        </div>
+      </a>
+      <div class="work-item"></div>
+    </div>
   </article>
 </body>
 </html>
