--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<div class="header-footer-container footer-text">
+<div class="header-footer-container website-container footer-text">
   <div id="copyright">&copy; Justin Tran <script>$("#copyright").append(new Date().getFullYear());</script></div>
   <div id="footer-comment">Developed by Justin Tran</div>
 </div>
