--- a/about.html
+++ b/about.html
@@ -6,13 +6,14 @@
 
   <title>About - Justin Tran</title>
 
-  <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/stylesheets/about.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/scripts/main.js"></script>
 </head>
 <body>
-  <section class="container">
+  <section class="about-container">
     <h1>About</h1>
     <p>Hi! I'm Justin Tran. I'm an aspiring UX Designer/Engineer and a 3rd-year student at the University of Washington majoring in Computer Science with a minor in Informatics.</p>
     <p>I'm currently working as an undergraduate researcher with a directed research group in the Human Centered Design and Engineering department studying how people architect their environments to manage addictive smartphone use.</p>
