added pics to community pillar

--- a/work/work.html
+++ b/work/work.html
@@ -15,54 +15,66 @@
 </head>
 <body>
   <article>
-    <h1>Work</h1>
-    <h2>UX</h2>
+    <h1>UX</h1>
     <div class="work-container">
       <a href="/work/pillar.html">
         <div class="work-item">
+          <img class="project-cover" src="/images/pillar/pillar-cover.png">
           <div>UW Community Pillar</div>
+          <p>Mobile 📱</p>
         </div>
       </a>
       <a href="/work/arque.html">
         <div class="work-item">
           <img class="project-cover" src="/images/arque/arque-cover.png">
+          <p>Website for parents of children with anxiety to exchange resources to help their children, track and share goal progress, and share experiences with other parents.</p>
+          <p>Web 🖥</p>
         </div>
       </a>
       <a href="/work/cyrus.html">
         <div class="work-item">
           <img class="project-cover" src="/images/cyrus/cyrus-cover.png">
+          <p>Vocabulary learning app designed for children from low-income families</p>
+          <p>Mobile 📱</p>
         </div>
       </a>
       <a href="/work/phrasebot.html">
         <div class="work-item">
           <img class="project-cover" src="/images/phrasebot/phrasebot-cover.png">
+          <p>Location-based language and cultural assistant designed to aid new immigrants in overcoming language and cultural barriers</p>
+          <p>Mobile 📱</p>
         </div>
       </a>
       <a href="/work/npo-go.html">
         <div class="work-item">
           <img class="project-cover" src="/images/npo-go/npo-go-cover.png">
+          <p>Platform designed to aid local NPOs in gathering donations</p>
+          <p>Mobile 📱</p>
         </div>
       </a>
       <div class="work-item"></div>
     </div>
-    <h2>Data Visualization</h2>
+    <h1>Data Visualization</h1>
     <div class="work-container">
       <a href="/work/us-census-visualization.html">
         <div class="work-item">
           <img class="project-cover" src="/images/us-census-visualization/census-cover.png">
-          <div>US Census Visualization</div>
+          <h3>US Census Visualization</h3>
+          <p>Infographic</p>
         </div>
       </a>
       <a href="/work/candidate-expenditures-visualization.html">
         <div class="work-item">
           <img class="project-cover" src="/images/candidate-expenditures-visualization/expenditures-cover.png">
-          <div>WA Congressional Candidate Expenditures Visualization</div>
+          <h3>WA Congressional Candidate Expenditures Visualization</h3>
+          <p>Exploring Data with Tableau</p>
         </div>
       </a>
       <a href="/work/relationship-data-exploration.html">
         <div class="work-item">
           <img class="project-cover" src="/images/relationship-data-exploration/relationship-cover.png">
-          <div>Relationship Data Exploration</div>
+          <h3>Relationship Data Exploration</h3>
+          <p>Interactive Website</p>
         </div>
       </a>
       <div class="work-item"></div>
