--- a/work/pillar.html
+++ b/work/pillar.html
@@ -8,13 +8,50 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/stylesheets/project.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/scripts/main.js"></script>
 </head>
 <body>
   <article class="container">
     <h1>UW Community Pillar</h1>
-    <h2>Case Study in Progress</h2>
+    <h2>Writeup in Progress</h2>
+    <p>Here are some pics from our showcase in the meantime!</p>
+    <figure>
+      <div class="project-image">
+        <img src="/images/pillar/showcase-1.jpg">
+      </div>
+    </figure>
+    <figure>
+      <div class="project-image">
+        <img src="/images/pillar/showcase-2.jpg">
+      </div>
+    </figure>
+    <figure>
+      <div class="project-image">
+        <img src="/images/pillar/showcase-3.jpg">
+      </div>
+    </figure>
+    <figure>
+      <div class="project-image">
+        <img src="/images/pillar/showcase-4.jpg">
+      </div>
+    </figure>
+    <figure>
+      <div class="project-image">
+        <img src="/images/pillar/showcase-5.jpg">
+      </div>
+    </figure>
+    <figure>
+      <div class="project-image">
+        <img src="/images/pillar/showcase-6.jpg">
+      </div>
+    </figure>
+    <figure>
+      <div class="project-image">
+        <img src="/images/pillar/showcase-7.jpg">
+      </div>
+    </figure>
   </article>
 </body>
 </html>
