added arque mockup

--- a/index.html
+++ b/index.html
@@ -22,16 +22,6 @@
   </section>
   <section>
     <h1 class="header-container">Featured Projects</h1>
-    <section class="project" id="pillar">
-      <div class="project-container website-container">
-        <div class="project-text">
-          <h2>UW Community Pillar</h2>
-          <p class="project-text__description">A public installation designed to foster a sense of community and to spark reflection on why we’re all at the university.</p>
-          <a class="project-link" href="/work/pillar.html"><div class="project-button">View Case Study</div></a>
-        </div>
-        <img src="/images/pillar/pillar-mockup.png" style="width:220px">
-      </div>
-    </section>
     <section class="project" id="phrasebot">
       <div class="project-container website-container">
         <div class="project-text">
@@ -52,6 +42,17 @@
         <img src="/images/arque/arque-mockup.png" style="width:500px">
       </div>
     </section>
+    <section class="project" id="pillar">
+      <div class="project-container website-container">
+        <div class="project-text">
+          <h2>UW Community Pillar</h2>
+          <p class="project-text__description">A public installation designed to bring together the University of Washington community and to help students reflect on what motivates them to pursue higher education.</p>
+          <a class="project-link" href="/work/pillar.html"><div class="project-button">View Case Study</div></a>
+        </div>
+        <img src="/images/pillar/pillar-mockup.png" style="width:220px">
+      </div>
+    </section>
+    <a class="project-link" href="/work/work.html"><div class="project-button all-projects-button">View All Projects</div></a>
   </section>
 </body>
 </html>
