--- a/work/cyrus.html
+++ b/work/cyrus.html
@@ -58,7 +58,7 @@
           <p>To make it <strong>kid friendly</strong>, our team member Reine designed our mascot Cyrus the Cyclops that would greet the user and guide them along the way. Having a tablet as opposed to a smart phone is also more kid friendly because the larger screens are easier for kids who are still developing their motor skills.</p>
           <figure>
             <div class="project-image">
-              <img src="/images/cyrus/cyrus-mascot.png" alt="Cyrus Mascot">
+              <img src="/images/cyrus/cyrus-mascot.png" alt="Cyrus Mascot" style="max-width:250px">
             </div>
             <figcaption>Cyrus the Cyclops</figcaption>
           </figure>
