--- a/work/work.html
+++ b/work/work.html
@@ -20,7 +20,7 @@
       <a href="/work/pillar.html">
         <div class="work-item">
           <img class="project-cover" src="/images/pillar/pillar-cover.png">
-          <div>UW Community Pillar</div>
+          <p>A public installation designed to bring together the University of Washington community and to help students reflect on what motivates them to pursue higher education.</p>
           <p>Mobile 📱</p>
         </div>
       </a>
