fixed description for phrasebot

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="project-container website-container">
         <div class="project-text">
           <h2>Phrasebot</h2>
-          <p class="project-text__description">A location-based language and cultural assistant designed to aid new immigrants in overcoming language and cultural barriers.</p>
+          <p class="project-text__description">A location-based assistant designed to aid new immigrants in overcoming language and cultural barriers.</p>
           <a class="project-link" href="/work/phrasebot.html"><div class="project-button">View Case Study</div></a>
         </div>
         <img src="/images/phrasebot/phrasebot-cover.png" style="width:400px">
