fixed work text

--- a/work/work.html
+++ b/work/work.html
@@ -41,7 +41,7 @@
       <a href="/work/phrasebot.html">
         <div class="work-item">
           <img class="project-cover" src="/images/phrasebot/phrasebot-cover.png">
-          <p>Location-based language and cultural assistant designed to aid new immigrants in overcoming language and cultural barriers</p>
+          <p>Location-based assistant designed to aid new immigrants in overcoming language and cultural barriers</p>
           <p>Mobile 📱</p>
         </div>
       </a>
