--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
 <body>
   <section class="about-container">
     <h1>About</h1>
-    <p>Hi! I'm Justin Tran. I'm an aspiring UX Designer/Engineer and a 3rd-year student at the University of Washington majoring in Computer Science with a minor in Informatics.</p>
-    <p>I'm currently working as an undergraduate researcher with a directed research group in the Human Centered Design and Engineering department studying how people architect their environments to manage addictive smartphone use.</p>
+    <p>Hi! I'm Justin Tran. I'm an aspiring UX Designer/Engineer and an upcoming 4th year student at the University of Washington majoring in Computer Science with a minor in Informatics.</p>
+    <p>This summer I'll be interning at Google as a UX Engineer. I'm currently looking for fall and winter internships!</p>
   </section>
 </body>
 </html>
