--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section class="page-container intro-container">
     <div class="introduction">
       <h1>Hello! 👋</h1>
-      <p>I'm Justin Tran, a rising senior at the University of Washington studying Computer Science. I'm interested in UX and Web Development. This summer, I'll be interning at <span class="google-blue">G</span><span class="google-red">o</span><span class="google-yellow">o</span><span class="google-blue">g</span><span class="google-green">l</span><span class="google-red">e</span> as a UX Engineer. I'm currently looking for fall and winter internships!</p>
+      <p>I'm Justin Tran. I'm currently a student at the University of Washington, where I'm studying Computer Science. I'm interested in Web & Mobile development, and I'm also really passionate about good UX. Check out some of my projects below!</p>
     </div>
   </section>
   <section>
