Updated About page

--- a/about.html
+++ b/about.html
@@ -25,8 +25,7 @@
 <body>
   <section class="about-container">
     <h1>About</h1>
-    <p>Hi! I'm Justin Tran. I'm an aspiring UX Designer/Engineer and an upcoming 4th year student at the University of Washington majoring in Computer Science with a minor in Informatics.</p>
-    <p>This summer I'll be interning at Google as a UX Engineer. I'm currently looking for fall and winter internships!</p>
+    <p>Hi! I'm Justin Tran. I'm an aspiring UX Designer/Engineer and a 4th year student at the University of Washington majoring in Computer Science.</p>
   </section>
 </body>
 </html>
