Added Dijkstra's Algorithm page

--- a/work/dijkstras-algorithm.html
+++ b/work/dijkstras-algorithm.html
@@ -14,7 +14,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Relationsip Data Exploration - Justin Tran</title>
+<title>Dijkstra's Algorithm Visualization - Justin Tran</title>
 
 <link rel="stylesheet" href="/stylesheets/main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
@@ -23,12 +23,12 @@
 </head>
 <body>
   <article class="container">
-    <h1>Relationship Data Exploration</h1>
+    <h1>Dijkstra's Algorithm Visualization</h1>
     <section>
       <h2>Background</h2>
       <p>CSE 442 Project</p>
-      <p>For this project, my group created a visualization that shows the predicted happiness ratings of a relationship based on various attributes. We created the visualization using D3.</p>
-      <p>See the final product <a href="https://cse442-17f.github.io/A3-Relationship-Exploration/">here</a>!</p>
+      <p>For this project, my group created a page explaining how Dijkstra's Algorithm works. We created the visualization using D3.</p>
+      <p>See the final product <a href="https://cse442-17f.github.io/Dijkstras-Algorithm/">here</a>!</p>
     </section>
   </article>
 </body>
