--- a/work/work.html
+++ b/work/work.html
@@ -87,7 +87,13 @@
           <p>Interactive Website</p>
         </div>
       </a>
-      <div class="work-item"></div>
+      <a href="/work/dijkstras-algorithm.html">
+        <div class="work-item">
+          <img class="project-cover" src="/images/dijkstras-algorithm/dijkstras-algorithm-cover.png">
+          <h3>Dijkstra's Algorithm Exploration</h3>
+          <p>Interactive Website</p>
+        </div>
+      </a>
     </div>
   </article>
 </body>
