--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section class="page-container intro-container">
     <div class="introduction">
       <h1>Hello! 👋</h1>
-      <p>I'm Justin Tran. I'm currently a student at the University of Washington, where I'm studying Computer Science. I'm interested in Web & Mobile development, and I'm also really passionate about good UX. Check out some of my projects below!</p>
+      <p>I'm Justin Tran. I'm a Software Engineer with a background in UX Design. Check out some of my design projects below!</p>
     </div>
   </section>
   <section>
