--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="project-container website-container">
         <div class="project-text">
           <h2>UW Community Pillar</h2>
-          <p class="project-text__description">A public installation designed to bring together the University of Washington community and to help students reflect on what motivates them to pursue higher education.</p>
+          <p class="project-text__description">A public installation designed to bring together the University of Washington community and help students reflect on what motivates them to pursue higher education.</p>
           <a class="project-link" href="/work/pillar.html"><div class="project-button">View Case Study</div></a>
         </div>
         <img src="/images/pillar/pillar-mockup.png" style="width:220px">
