--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="introduction">
       <h1>Hello! 👋</h1>
       <p>I'm Justin Tran.
-        <br>Check out some of my design projects below.
+        <br>Check out some of my design projects below!
       </p>
     </div>
   </section>
