--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 <body>
   <section class="about-container">
     <h1>About</h1>
-    <p>Hi! I'm Justin Tran. I'm an aspiring UX Designer/Engineer and a 4th year student at the University of Washington majoring in Computer Science.</p>
+    <p>Hi! I'm Justin Tran. I'm an aspiring UX Designer/Engineer.</p>
   </section>
 </body>
 </html>
