--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 <body>
   <section class="about-container">
     <h1>About</h1>
-    <p>Hi! I'm Justin Tran. I'm an aspiring UX Designer/Engineer.</p>
+    <p>Hi! I'm Justin Tran. I'm a UX Designer.</p>
   </section>
 </body>
 </html>
