Remove about page and update hero statement

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   <section class="page-container intro-container">
     <div class="introduction">
       <h1>Hello! 👋</h1>
-      <p>I'm Justin Tran. I'm a UX Designer. Previously, I interned at Google.
+      <p>I'm Justin Tran.
+        <br>I'm a UX Designer.
+        <br>Previously, I interned at Google.
         <br>Check out some of my design projects below!
       </p>
     </div>
