--- a/navigation-bar.html
+++ b/navigation-bar.html
@@ -4,7 +4,7 @@
     <nav>
       <a href="/index.html" class="nav-buttons"><div>Home</div></a>
       <a href="/work/work.html" class="nav-buttons"><div>Work</div></a>
-      <a href="/about.html" class="nav-buttons"><div>About</div></a>
+      <!-- <a href="/about.html" class="nav-buttons"><div>About</div></a> -->
     </nav>
   </div>
 </div>
