--- a/work/phrasebot.html
+++ b/work/phrasebot.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- disabled analytics
+   Global site tag (gtag.js) - Google Analytics
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121630913-1"></script>
   <script>
   window.dataLayer = window.dataLayer || [];
@@ -10,6 +11,7 @@
 
   gtag('config', 'UA-121630913-1');
 </script>
+-->
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
